--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <span id="interaction">Trace the whispers threading through the maze...</span>
       </div>
     </div>
-    <link rel="modulepreload" href="./js/main.js?v=20240512" />
+    <link rel="modulepreload" href="./js/main.js" />
     <script type="module">
       const MODULE_VERSION = '20240512';
       const moduleUrl = new URL('./js/main.js', import.meta.url);
