Fix Three.js import conflicts with patched quaternion track

--- a/index.html
+++ b/index.html
@@ -5,6 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Labyrinth Echo Prototype</title>
     <link rel="stylesheet" href="styles.css" />
+    <script type="importmap">
+      {
+        "imports": {
+          "three": "./js/vendor/three-patch.js",
+          "three/": "https://unpkg.com/three@0.160.0/"
+        }
+      }
+    </script>
   </head>
   <body>
     <canvas id="scene"></canvas>
