Rework maze hallway chase experience

--- a/index.html
+++ b/index.html
@@ -19,11 +19,14 @@
     <div id="overlay">
       <h1>Labyrinth Echo</h1>
       <p class="instructions">
-        Click to lock the pointer. Use <strong>WASD</strong> to move, <strong>mouse</strong> to look.
-        Press <strong>Shift</strong> to sprint and <strong>Space</strong> to hush the whispering shrines.
+        Click to lock the pointer. Use <strong>WASD</strong> to move and the <strong>mouse</strong> to look.
+        Hold <strong>Shift</strong> to sprint down the hallway. Find the maze core before the monster does.
       </p>
       <div class="status">
-        <span id="interaction">Trace the whispers threading through the maze...</span>
+        <span id="interaction">Walk toward the flickering light ahead...</span>
+      </div>
+      <div class="actions">
+        <button id="restart-button" type="button">Restart</button>
       </div>
     </div>
     <link rel="modulepreload" href="./js/main.js" />
